--- a/main.org
+++ b/main.org
@@ -44,8 +44,8 @@ Base settings
 
 Display line numbers
 #+BEGIN_SRC emacs-lisp :results output silent
-(global-display-line-numbers-mode)
 (setq display-line-numbers 'relative) 
+(global-display-line-numbers-mode)
 #+END_SRC
 
 Search for non ascii characters
@@ -492,17 +492,61 @@ For backward word and forwardword
 
 * Company-mode
 #+BEGIN_SRC emacs-lisp :results output silent
-(use-package company
+;; (use-package company
+;;   :ensure t
+;;   :custom
+;;   (company-begin-commands '(self-insert-command))
+;;   (company-idle-delay 0.3)
+;;   (company-minimum-prefix-length 1)
+;;   (company-show-numbers nil)
+;;   (company-tooltip-align-annotations 't)
+;;   :config
+;;   (add-hook 'after-init-hook 'global-company-mode)
+;;   )
+#+END_SRC
+
+* Corfu (replace company mode)
+#+BEGIN_SRC emacs-lisp :results output silent
+(use-package corfu
   :ensure t
-  :custom
-  (company-begin-commands '(self-insert-command))
-  (company-idle-delay 0.3)
-  (company-minimum-prefix-length 1)
-  (company-show-numbers nil)
-  (company-tooltip-align-annotations 't)
-  :config
-  (add-hook 'after-init-hook 'global-company-mode)
-  )
+  ;; Optional customizations
+  ;; :custom
+  ;; (corfu-cycle t)                ;; Enable cycling for `corfu-next/previous'
+  (corfu-auto t)                 ;; Enable auto completion
+  ;; (corfu-separator ?\s)          ;; Orderless field separator
+  ;; (corfu-quit-at-boundary nil)   ;; Never quit at completion boundary
+  ;; (corfu-quit-no-match nil)      ;; Never quit, even if there is no match
+  ;; (corfu-preview-current nil)    ;; Disable current candidate preview
+  ;; (corfu-preselect-first nil)    ;; Disable candidate preselection
+  ;; (corfu-on-exact-match nil)     ;; Configure handling of exact matches
+  ;; (corfu-echo-documentation nil) ;; Disable documentation in the echo area
+  ;; (corfu-scroll-margin 5)        ;; Use scroll margin
+
+  ;; Enable Corfu only for certain modes.
+  ;; :hook ((prog-mode . corfu-mode)
+  ;;        (shell-mode . corfu-mode)
+  ;;        (eshell-mode . corfu-mode))
+
+  ;; Recommended: Enable Corfu globally.
+  ;; This is recommended since Dabbrev can be used globally (M-/).
+  ;; See also `corfu-excluded-modes'.
+  :init
+  (global-corfu-mode))
+
+(use-package emacs
+  :init
+  ;; TAB cycle if there are only few candidates
+  (setq completion-cycle-threshold 3)
+
+  ;; Emacs 28: Hide commands in M-x which do not apply to the current mode.
+  ;; Corfu commands are hidden, since they are not supposed to be used via M-x.
+  ;; (setq read-extended-command-predicate
+  ;;       #'command-completion-default-include-p)
+
+  ;; Enable indentation+completion using the TAB key.
+  ;; `completion-at-point' is often bound to M-TAB.
+  (setq tab-always-indent 'complete))
+
 #+END_SRC
 
 * Python
